# one-hand-clapping

./: .gitignore  .gitmodules  README.md  pyproject.toml
EvoCLAP/: genertic_algorithm.py  vsthost.py
config/: genetic_algorithm.yaml
examples/: genetic_test.ipynb  search.ipynb
ohc/: run.py
ohc/fitness/: clap.py  fitness.py
ohc/search/: genertic_algorithm.py  search.py
ohc/vst/: __init__.py  vst.py  vst_base.py  vst_dawdreamer.py
test/: conftest.py  test_vst.py
web-interface/api/: app.py  requirements.txt
web-interface/client/: package.json
web-interface/client/src/: App.js
web-interface/client/src/components/: layout.js  paramChecker.js
web-interface/server/: app.py
web-interface/src/templates/: index.html
