[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ohc"]

[project]
name = "ohc"
version = "0.0.4"
description = "What is the sound of one hand CLAPping?"
authors = [
  { name = "Jordie Shier" },
  { name = "Soumya Sai Vanka"},
  { name = "Ashley Noel-Hirst"},
  { name = "Ben Hayes" } 
]
readme = "README.md"
dependencies = [
  "torch>=2.0.0",
  "evotorch==0.5.1",
  "ray==2.9.3",
  "transformers>=4.0.0",
  "dawdreamer>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
    "pre-commit",
    "pytest-cov",
    "python-dotenv",
]
